--- a/main/templates/tictactoe/room.html
+++ b/main/templates/tictactoe/room.html
@@ -6,31 +6,63 @@
 <head>
     <meta charset="utf-8"/>
     <title>{{room_name}} | TicTacToe Room</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <style>
 
+    .content{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #34495e;
+        color: white;
+        overflow: hidden;
+        flex-direction: column;
+        font-family: 'Poppins';
+        transition: background-color 300ms ease;
+    }
+
+    .content.green{
+        background-color: #16a085;
+    }
+
+    .content.red{
+        background-color: #e74c3c;
+    }
+
+    .content.yellow{
+        background-color: #f39c12;
+    }
+
     table tr td{
-        border: 1px solid #000;
-        width: 80px;
-        height: 80px;
-        font-size: 70px;
+        margin: 3px;
+        width: 30vw;
+        height: 30vw;
+        max-width: 150px;
+        max-height: 150px;
+        font-size: min(29vw, 140px);
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        color: black;
+        color: #456;
         transition: all 300ms cubic-bezier(.47,1.64,.41,.8);
+        background-color: white;
     }
 
     .empty{
         font-size: 50px;
-        {% comment %} transition: all 100ms linear; {% endcomment %}
         color: white;
     }
+
 
 </style>
 
 <body>
+    
     <div id="root"></div>
     
     {{ room_name|json_script:"room-name" }}
